src/pages/Iit.css
.iIt__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 8vw;
  min-height: 250vw;
}

.revealMe {
  background-color: #2b61d5;
  color: #f3f3f3;
  border-radius: 8vw;
  height: 8.75vw;
  width: 38vw;
  border: none;
  font-size: 3vw;
  font-family: "C90Degree";
  font-weight: 700;
  margin-bottom: 2.5vw;
}
.iIt__bioCv {
  display: flex;
  gap: 5vw;
}
.bio__x {
  margin-bottom: 1vw;
  margin-top: 1vw;
  cursor: pointer;
  width: 80%;
}
.bio__container > svg {
  width: 5vw;
}
.cv__container > img {
  width: 70vw;
}

.iIt__cv {
  height: 7vw;
  width: 7vw;
  border-radius: 50%;
  background-color: #ddc73e;
  position: relative;
  cursor: pointer;
}
.iIt__circleText {
  font-family: "C90Degree";
  font-weight: 900;
  color: white;
  text-shadow: 0.1px 0.3px, 0.2px 0.6px white;
  position: absolute;
  bottom: 34%;
  left: 30%;
  font-size: 2vw;
}
.iIt__topContent {
  display: flex;
  flex-direction: column;
  align-items: center;
}
@media screen and (min-width: 768px) {
  .iIt__container {
    margin-top: 1.3vw;
    flex-direction: column;
    align-items: center;
    /* min-height: 250vw; */
  }
  .revealMe {
    margin-top: 2.5vw;
  }
  .revealMe {
    border-radius: 3vw;
  }
  .iIt__topContent {
    flex-direction: row;
    flex-wrap: wrap;
    /* align-items: center; */
    justify-content: center;
  }
  #iItPageTitle {
    width: 100vw;
    text-align: center;
  }
  .iIt__bioCv {
    margin-left: 6vw;
    gap: 0.5vw;
    z-index: 5;
  }
}

